--- a/frontend/src/pages/Signup/style.css
+++ b/frontend/src/pages/Signup/style.css
@@ -13,7 +13,6 @@
     display: flex;
     flex-direction: column;
     justify-content:space-evenly;
-    gap: 4px;
     width: 400px;
     height: 500px;
     border: 1px solid black;
@@ -23,11 +22,19 @@
 .inputBox{
     display: flex;
     width: 100%;
+    background-color: #F0EDFFCC;
     justify-content: space-evenly;
+    border-radius: 13px;
+    align-items: center;
+
 }
 .inputBox>input{
-    width: 70%;
+    padding: 20px;
+    background-color: #F0EDFFCC;
+    border: none;
+   
 }
+
 .selector{
     display: flex;
     width: 80%;
